# cppilot

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bat/: compile.sh  create_lib.sh
cmake/: copy_dlls.cmake
cmake/common/: CMakeLists.txt
cmake/config/: CMakeLists.txt
cmake/core/: CMakeLists.txt
cmake/cppilot/: CMakeLists.txt
cmake/generate/: CMakeLists.txt
cmake/model/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
cmake/tokenizer/: CMakeLists.txt
config/: loggers.xml
config/cppilot/: loggers.xml
src/common/: common_constant.h  common_fwd.h
src/common/core/: celeritas_error.cpp  celeritas_error.h  command_line_config.cpp  command_line_config.h  cppilot_error.cpp  cppilot_error.h  enum_cast.h  enum_operator.h  noexcept_safe_call_and_log.h
src/common/framework/: celeritas_main.cpp  celeritas_main.h
src/common/logging/: logger.cpp  logger.h
src/common/logging/detail/: common_logger_internal_constant.h  common_logger_internal_fwd.h  logger_console.cpp  logger_console.h  logger_container.cpp  logger_container.h  logger_impl.cpp  logger_impl.h  logger_level.cpp  logger_level.h  logger_level_data.cpp  logger_level_data.h  logger_namespace.h  logger_support.h
src/common/system/: crash.cpp  crash.h  daemon.cpp  daemon.h
src/config/: config_constant.h  config_fwd.h  main.cpp
src/config/aggregate/detail/: logger_config_reader.cpp  logger_config_reader.h
src/config/local/: logger_config.cpp  logger_config.h  logger_level_config.cpp  logger_level_config.h
src/core/: core_fwd.h
src/cppilot/: cppilot_constant.h  cppilot_fwd.h  cppilot_main.cpp  cppilot_main.h  main.cpp
src/cppilot/core/: initializer.cpp  initializer.h
src/cppilot/main/: cppilot_main.cpp
tests/: main.cpp
